.kubernetes/deployment_pay_local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-simple-site-pay
  namespace: test-a
  labels:
    app: "go-simple-site-pay"
    version: "1.0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: go-simple-site-pay
  template:
    metadata:
      labels:
        app: go-simple-site-pay
        version: "1.0"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - name: go-rest-api
        imagePullPolicy: Never
        image: go_simple_site_pay:latest
        resources:
           requests:
             cpu: 100m
             memory: 50Mi
           limits:
             cpu: 200m
             memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        readinessProbe:
            httpGet:
              path: /health
              port: http
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
        livenessProbe:
            httpGet:
              path: /health
              port: http
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 60
