.kubernetes/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-go-simple-site-bike-lb
  namespace: test-a
spec:
  ports:
  - name: svc-go-simple-site-bike-lb
    port: 4000
    targetPort: 3000
  selector:
    app: go-simple-site-bike
  type: LoadBalancer
  ---
apiVersion: v1
kind: Service
metadata:
  name: svc-go-simple-site-food-lb
  namespace: test-a
spec:
  ports:
  - name: svc-go-simple-site-food-lb
    port: 4001
    targetPort: 3000
  selector:
    app: go-simple-site-food
  type: LoadBalancer
  ---
apiVersion: v1
kind: Service
metadata:
  name: svc-go-simple-site-pay-lb
  namespace: test-a
spec:
  ports:
  - name: svc-go-simple-site-pay-lb
    port: 4002
    targetPort: 3000
  selector:
    app: go-simple-site-pay
  type: LoadBalancer
  ---
apiVersion: v1
kind: Service
metadata:
  name: svc-go-simple-site-stream-lb
  namespace: test-a
spec:
  ports:
  - name: svc-go-simple-site-stream-lb
    port: 4002
    targetPort: 3000
  selector:
    app: go-simple-site-pay
  type: LoadBalancer
