.kubernetes/ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go-simple-site
  namespace: test-a
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /bike
        pathType: Prefix
        backend:
          service:
           name: svc-go-simple-site-bike
           port:
            number: 3000
      - path: /food
        pathType: Prefix
        backend:
          service:
           name: svc-go-simple-site-food
           port:
            number: 3001
      - path: /pay
        pathType: Prefix
        backend:
          service:
           name: svc-go-simple-site-pay
           port:
            number: 3002
      - path: /stream
        pathType: Prefix
        backend:
          service:
           name: svc-go-simple-site-stream
           port:
            number: 3003
